-- backend/src/db/schema.sql -- the complete relational schema.
--
-- Applied by `npm run migrate` (scripts/migrate.js) and by the test harness before
-- any test runs, so the schema a test exercises is byte-for-byte the schema a
-- deployment gets. Every statement is idempotent (`CREATE TABLE IF NOT EXISTS`), so
-- re-running it on an existing database is a no-op rather than an error.
--
-- Engine/charset choices, stated once here rather than per table:
--   ENGINE=InnoDB      -- required for FOREIGN KEY constraints and transactions.
--                         MyISAM silently ignores both, which would quietly void
--                         every guarantee this application depends on.
--   utf8mb4            -- 4-byte UTF-8, so an item name or batch label may contain
--                         any character including emoji. `utf8` in MySQL is only
--                         3 bytes and cannot store them.
--   utf8mb4_0900_as_cs -- accent- and case-SENSITIVE. Codes and batch labels are
--                         identifiers: 'batch-a' and 'BATCH-A' are different
--                         batches, and the UNIQUE indexes below must treat them as
--                         such. MySQL's default collation is case-INSENSITIVE and
--                         would collapse them into one row.
--
-- Identifier strategy: every primary key is CHAR(24) holding a 24-character
-- lowercase hex string, generated by src/db/id.js. Not AUTO_INCREMENT, on purpose:
--   - the public API already exposes these ids and its validation layer enforces
--     /^[a-f0-9]{24}$/, so keeping the shape means the HTTP contract, the OpenAPI
--     spec, and the web client are unaffected by this migration;
--   - a sequential integer key leaks the row count of every table to any caller
--     who can read one id.
-- The cost is a 24-byte key rather than 8, which at this scale is irrelevant.
--
-- Referential actions: every foreign key below is `ON UPDATE RESTRICT`. Primary keys
-- here are immutable -- src/db/id.js generates one at insert time and nothing ever
-- rewrites it -- so there is no update for a CASCADE to propagate, and declaring one
-- would be dead weight. It also keeps the CHECK constraints legal: MySQL refuses a
-- CHECK on any column that a foreign key's referential action would have to touch.

-- ---------------------------------------------------------------------------------
-- Reference data
-- ---------------------------------------------------------------------------------

CREATE TABLE IF NOT EXISTS categories (
    id         CHAR(24)     NOT NULL,
    name       VARCHAR(120) NOT NULL,
    created_at DATETIME(3)  NOT NULL DEFAULT CURRENT_TIMESTAMP(3),
    updated_at DATETIME(3)  NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3),
    PRIMARY KEY (id),
    -- The category name is the business identity (Req 3.2).
    UNIQUE KEY uq_categories_name (name)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_0900_as_cs;

CREATE TABLE IF NOT EXISTS locations (
    id         CHAR(24)     NOT NULL,
    code       VARCHAR(32)  NOT NULL,
    name       VARCHAR(120) NOT NULL,
    created_at DATETIME(3)  NOT NULL DEFAULT CURRENT_TIMESTAMP(3),
    updated_at DATETIME(3)  NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3),
    PRIMARY KEY (id),
    -- The location code is the business identity; two locations may share a name.
    UNIQUE KEY uq_locations_code (code)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_0900_as_cs;

CREATE TABLE IF NOT EXISTS items (
    id          CHAR(24)     NOT NULL,
    code        VARCHAR(32)  NOT NULL,
    name        VARCHAR(120) NOT NULL,
    category_id CHAR(24)     NOT NULL,
    created_at  DATETIME(3)  NOT NULL DEFAULT CURRENT_TIMESTAMP(3),
    updated_at  DATETIME(3)  NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3),
    PRIMARY KEY (id),
    -- The item code is the business identity; two items may share a name.
    UNIQUE KEY uq_items_code (code),
    -- Non-unique: many items share a category. Exists so listing one category's
    -- items is an index range scan rather than a full table scan.
    KEY ix_items_category (category_id),
    -- RESTRICT, not CASCADE: deleting a category that items still reference is a
    -- data-entry mistake, and silently deleting those items with it would be worse
    -- than refusing. The application never deletes reference data anyway.
    CONSTRAINT fk_items_category FOREIGN KEY (category_id)
        REFERENCES categories (id) ON DELETE RESTRICT ON UPDATE RESTRICT
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_0900_as_cs;

-- ---------------------------------------------------------------------------------
-- Users
-- ---------------------------------------------------------------------------------

CREATE TABLE IF NOT EXISTS users (
    id                   CHAR(24)     NOT NULL,
    email                VARCHAR(254) NOT NULL,
    -- bcrypt output is always 60 characters. Never selected by a list query: only
    -- the login lookup asks for it (Req 1.1).
    password_hash        CHAR(60)     NOT NULL,
    role                 ENUM('Admin', 'OperationsUser', 'SalesUser') NOT NULL,
    -- NULL for a user not bound to one site, e.g. an Admin (Req 15.4).
    assigned_location_id CHAR(24)     NULL,
    created_at           DATETIME(3)  NOT NULL DEFAULT CURRENT_TIMESTAMP(3),
    updated_at           DATETIME(3)  NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3),
    PRIMARY KEY (id),
    -- Emails are stored already trimmed and lowercased by the application, so this
    -- unique index compares like with like (Req 1.1).
    UNIQUE KEY uq_users_email (email),
    KEY ix_users_assigned_location (assigned_location_id),
    -- SET NULL: removing a location should not remove the people who worked there,
    -- it should just leave them unassigned.
    CONSTRAINT fk_users_assigned_location FOREIGN KEY (assigned_location_id)
        REFERENCES locations (id) ON DELETE SET NULL ON UPDATE RESTRICT
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_0900_as_cs;

-- ---------------------------------------------------------------------------------
-- Inventory
-- ---------------------------------------------------------------------------------

CREATE TABLE IF NOT EXISTS inventory_records (
    id                CHAR(24)    NOT NULL,
    item_id           CHAR(24)    NOT NULL,
    location_id       CHAR(24)    NOT NULL,
    batch             VARCHAR(32) NOT NULL,
    -- UNSIGNED so the database itself refuses a negative quantity even if a bug
    -- ever slipped past the service-layer guards (Req 3.8). The CHECK constraints
    -- below state the same bounds declaratively; MySQL 8.0.16+ enforces them.
    physical_quantity INT UNSIGNED NOT NULL DEFAULT 0,
    reserved_quantity INT UNSIGNED NOT NULL DEFAULT 0,
    created_at        DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),
    updated_at        DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3),
    PRIMARY KEY (id),
    -- The natural key of an inventory record (Req 3.6). Declared once, as the
    -- unique index; a second non-unique index on the same leading columns would be
    -- redundant because this one already serves those lookups.
    UNIQUE KEY uq_inventory_item_location_batch (item_id, location_id, batch),
    -- Serves `WHERE location_id = ?` and the location-availability sum, neither of
    -- which can use the unique index above (item_id is not in the predicate).
    KEY ix_inventory_location (location_id),
    CONSTRAINT fk_inventory_item FOREIGN KEY (item_id)
        REFERENCES items (id) ON DELETE RESTRICT ON UPDATE RESTRICT,
    CONSTRAINT fk_inventory_location FOREIGN KEY (location_id)
        REFERENCES locations (id) ON DELETE RESTRICT ON UPDATE RESTRICT,
    -- The two invariants of Req 3.8/3.9, enforced by the database rather than only
    -- by the application: quantities stay within range, and reserved never exceeds
    -- physical (which is what makes available_quantity >= 0 hold by construction).
    CONSTRAINT ck_inventory_physical_max CHECK (physical_quantity <= 999999999),
    CONSTRAINT ck_inventory_reserved_max CHECK (reserved_quantity <= 999999999),
    CONSTRAINT ck_inventory_reserved_lte_physical CHECK (reserved_quantity <= physical_quantity)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_0900_as_cs;

-- The append-only ledger. Every change to an inventory_records row writes exactly
-- one row here, in the same transaction, so the balances can be reconstructed by
-- summing the deltas (Req 4.4, 4.7).
CREATE TABLE IF NOT EXISTS inventory_transactions (
    id                  CHAR(24)     NOT NULL,
    inventory_record_id CHAR(24)     NOT NULL,
    -- SIGNED, unlike the balances above: a movement out of stock is negative.
    physical_delta      INT          NOT NULL,
    reserved_delta      INT          NOT NULL,
    -- The idempotency key. This UNIQUE index is the mechanism that makes a replayed
    -- or concurrent duplicate write fail at the database rather than being applied
    -- twice (Req 4.5): the second insert raises ER_DUP_ENTRY, which the service
    -- layer maps to DUPLICATE_INVENTORY_TRANSACTION.
    movement_reference  VARCHAR(200) NOT NULL,
    applied_at          DATETIME(3)  NOT NULL DEFAULT CURRENT_TIMESTAMP(3),
    -- NULL for a movement the seed script applied with no acting user.
    created_by          CHAR(24)     NULL,
    PRIMARY KEY (id),
    UNIQUE KEY uq_inventory_transactions_movement_reference (movement_reference),
    -- Serves ledger reconstruction for one record in application order.
    KEY ix_inventory_transactions_record_applied (inventory_record_id, applied_at),
    KEY ix_inventory_transactions_created_by (created_by),
    CONSTRAINT fk_inventory_transactions_record FOREIGN KEY (inventory_record_id)
        REFERENCES inventory_records (id) ON DELETE RESTRICT ON UPDATE RESTRICT,
    CONSTRAINT fk_inventory_transactions_created_by FOREIGN KEY (created_by)
        REFERENCES users (id) ON DELETE SET NULL ON UPDATE RESTRICT
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_0900_as_cs;

-- ---------------------------------------------------------------------------------
-- Work orders
-- ---------------------------------------------------------------------------------

CREATE TABLE IF NOT EXISTS work_orders (
    id                CHAR(24)     NOT NULL,
    location_id       CHAR(24)     NOT NULL,
    item_id           CHAR(24)     NOT NULL,
    required_quantity INT UNSIGNED NOT NULL,
    assigned_user_id  CHAR(24)     NOT NULL,
    status            ENUM('Assigned', 'InProgress', 'Completed') NOT NULL DEFAULT 'Assigned',
    -- NULL until the first status change (Req 5.8).
    status_changed_at DATETIME(3)  NULL,
    created_by        CHAR(24)     NULL,
    created_at        DATETIME(3)  NOT NULL DEFAULT CURRENT_TIMESTAMP(3),
    updated_at        DATETIME(3)  NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3),
    PRIMARY KEY (id),
    -- No stored shortage column on purpose: shortage is derived at read time from
    -- current availability, so it can never go stale (Req 5.4).
    KEY ix_work_orders_item_location (item_id, location_id),
    KEY ix_work_orders_status (status),
    KEY ix_work_orders_assigned_user (assigned_user_id),
    KEY ix_work_orders_created_by (created_by),
    CONSTRAINT fk_work_orders_location FOREIGN KEY (location_id)
        REFERENCES locations (id) ON DELETE RESTRICT ON UPDATE RESTRICT,
    CONSTRAINT fk_work_orders_item FOREIGN KEY (item_id)
        REFERENCES items (id) ON DELETE RESTRICT ON UPDATE RESTRICT,
    CONSTRAINT fk_work_orders_assigned_user FOREIGN KEY (assigned_user_id)
        REFERENCES users (id) ON DELETE RESTRICT ON UPDATE RESTRICT,
    CONSTRAINT fk_work_orders_created_by FOREIGN KEY (created_by)
        REFERENCES users (id) ON DELETE SET NULL ON UPDATE RESTRICT,
    CONSTRAINT ck_work_orders_required_quantity
        CHECK (required_quantity BETWEEN 1 AND 1000000)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_0900_as_cs;

-- ---------------------------------------------------------------------------------
-- Internal transfers
-- ---------------------------------------------------------------------------------

CREATE TABLE IF NOT EXISTS internal_transfers (
    id                      CHAR(24)     NOT NULL,
    item_id                 CHAR(24)     NOT NULL,
    batch                   VARCHAR(32)  NOT NULL,
    source_location_id      CHAR(24)     NOT NULL,
    destination_location_id CHAR(24)     NOT NULL,
    quantity                INT UNSIGNED NOT NULL,
    -- 0 until received, then equal to `quantity`. Kept as its own column rather
    -- than derived from `status` so a future partial-receipt feature can hold a
    -- value strictly between 0 and quantity without a schema change (Req 15.2).
    received_quantity       INT UNSIGNED NOT NULL DEFAULT 0,
    status                  ENUM('Requested', 'Dispatched', 'Received') NOT NULL DEFAULT 'Requested',
    dispatched_at           DATETIME(3)  NULL,
    received_at             DATETIME(3)  NULL,
    created_by              CHAR(24)     NULL,
    created_at              DATETIME(3)  NOT NULL DEFAULT CURRENT_TIMESTAMP(3),
    updated_at              DATETIME(3)  NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3),
    PRIMARY KEY (id),
    KEY ix_internal_transfers_status (status),
    KEY ix_internal_transfers_item_source_batch (item_id, source_location_id, batch),
    KEY ix_internal_transfers_destination (destination_location_id),
    KEY ix_internal_transfers_created_by (created_by),
    CONSTRAINT fk_internal_transfers_item FOREIGN KEY (item_id)
        REFERENCES items (id) ON DELETE RESTRICT ON UPDATE RESTRICT,
    CONSTRAINT fk_internal_transfers_source FOREIGN KEY (source_location_id)
        REFERENCES locations (id) ON DELETE RESTRICT ON UPDATE RESTRICT,
    CONSTRAINT fk_internal_transfers_destination FOREIGN KEY (destination_location_id)
        REFERENCES locations (id) ON DELETE RESTRICT ON UPDATE RESTRICT,
    CONSTRAINT fk_internal_transfers_created_by FOREIGN KEY (created_by)
        REFERENCES users (id) ON DELETE SET NULL ON UPDATE RESTRICT,
    CONSTRAINT ck_internal_transfers_quantity CHECK (quantity BETWEEN 1 AND 1000000),
    -- Req 15.2: a receipt can never book in more than was sent.
    CONSTRAINT ck_internal_transfers_received_lte_quantity
        CHECK (received_quantity <= quantity),
    -- Req 6.2: the two endpoints of a transfer must differ. Enforced here as well
    -- as in the service guard, so no code path can create a same-location transfer.
    CONSTRAINT ck_internal_transfers_distinct_locations
        CHECK (source_location_id <> destination_location_id)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_0900_as_cs;

-- ---------------------------------------------------------------------------------
-- Customer orders
-- ---------------------------------------------------------------------------------

CREATE TABLE IF NOT EXISTS customer_orders (
    id            CHAR(24)     NOT NULL,
    customer_name VARCHAR(120) NOT NULL,
    item_id       CHAR(24)     NOT NULL,
    location_id   CHAR(24)     NOT NULL,
    quantity      INT UNSIGNED NOT NULL,
    status        ENUM('Reserved', 'Cancelled') NOT NULL DEFAULT 'Reserved',
    created_by    CHAR(24)     NULL,
    created_at    DATETIME(3)  NOT NULL DEFAULT CURRENT_TIMESTAMP(3),
    updated_at    DATETIME(3)  NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3),
    PRIMARY KEY (id),
    KEY ix_customer_orders_item_location (item_id, location_id),
    KEY ix_customer_orders_status (status),
    KEY ix_customer_orders_created_by (created_by),
    CONSTRAINT fk_customer_orders_item FOREIGN KEY (item_id)
        REFERENCES items (id) ON DELETE RESTRICT ON UPDATE RESTRICT,
    CONSTRAINT fk_customer_orders_location FOREIGN KEY (location_id)
        REFERENCES locations (id) ON DELETE RESTRICT ON UPDATE RESTRICT,
    CONSTRAINT fk_customer_orders_created_by FOREIGN KEY (created_by)
        REFERENCES users (id) ON DELETE SET NULL ON UPDATE RESTRICT,
    CONSTRAINT ck_customer_orders_quantity CHECK (quantity BETWEEN 1 AND 1000000)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_0900_as_cs;

-- Which batches an order actually drew its reservation from.
--
-- Under MongoDB these lines were an embedded array on the order document. In a
-- relational schema they become a child table: one row per batch drawn from, which
-- is what lets the reservation lines be queried and aggregated on their own (for
-- example "how much of batch X is spoken for, and by whom") instead of only ever
-- being read back as part of their parent order.
--
-- CASCADE here, unlike everywhere else in this schema: a reservation line has no
-- meaning without its order, so deleting the order must take its lines with it
-- rather than leaving orphans behind.
CREATE TABLE IF NOT EXISTS customer_order_reservations (
    id                CHAR(24)     NOT NULL,
    customer_order_id CHAR(24)     NOT NULL,
    item_id           CHAR(24)     NOT NULL,
    location_id       CHAR(24)     NOT NULL,
    batch             VARCHAR(32)  NOT NULL,
    quantity          INT UNSIGNED NOT NULL,
    created_at        DATETIME(3)  NOT NULL DEFAULT CURRENT_TIMESTAMP(3),
    PRIMARY KEY (id),
    -- One line per batch per order: an order draws from any given batch once, in a
    -- single ascending-batch pass (Req 15.6).
    UNIQUE KEY uq_reservation_order_batch (customer_order_id, item_id, location_id, batch),
    KEY ix_reservation_item_location_batch (item_id, location_id, batch),
    CONSTRAINT fk_reservation_order FOREIGN KEY (customer_order_id)
        REFERENCES customer_orders (id) ON DELETE CASCADE ON UPDATE RESTRICT,
    CONSTRAINT fk_reservation_item FOREIGN KEY (item_id)
        REFERENCES items (id) ON DELETE RESTRICT ON UPDATE RESTRICT,
    CONSTRAINT fk_reservation_location FOREIGN KEY (location_id)
        REFERENCES locations (id) ON DELETE RESTRICT ON UPDATE RESTRICT,
    CONSTRAINT ck_reservation_quantity CHECK (quantity BETWEEN 1 AND 1000000)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_0900_as_cs;
